css/kunai/yata.css
@import './variables';

body.kunai {
  .yata:not(.hidden) + .codehilite {
    pre {
      border-top-left-radius: 0;
      border-top-right-radius: 0;

      border-top: none;
    }
  }

  .yata {
    display: flex;
    background: color($cl-shuri tint(25%));
    border-radius: 2px 2px 0 0;

    position: relative;
    z-index: 5;

    &.hidden {
      display: none;
    }

    // &:not(.enabled) {
      // .tool:not(.play) button, .not-a-button {
    .tool button:disabled {
      $disabled: #DDD;
      background: $disabled;
      cursor: not-allowed;
    }

    &.enabled {
      button, .not-a-button {
        // default colors
        background: none;
      }
    }

    &:not(.enabled) .play button {
      background: none;
    }

    &.enabled .play button {
      background: $cl-shuri;
    }

    .tools-all {
      display: flex;
      width: 100%;
      justify-content: space-between;
    }

    ul.tools {
      display: flex;
      align-items: flex-start;
      list-style-type: none;
      margin: 0;
      padding: .25em .35em;
      @include box-reset;

      li.tool {
        position: relative;
        display: flex;
        align-items: center;

        select {
          border: 1px solid $bd-ui-gray;
          background: $bg-ui-gray;
          height: 1.6em;
          font-size: .9em;

          width: 8em;

          option {
            &:checked {
              font-weight: bold;
            }
          }
        }

        button, .not-a-button {
          $size: 30px;
          display: flex;
          position: relative;
          justify-content: center;
          align-items: center;
          box-sizing: border-box;

          width: $size;
          height: $size;

          font-family: sans-serif;
          border: none;
          font-size: 1.2em;
          // transition: .1s ease-out;

          padding: 0;
          color: #FFF;
          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);

          .tooltip {
            position: absolute;
            visibility: hidden;
            display: block;
            top: 100%;
            left: 1em;
            cursor: text;

            background: #222;
            color: #EFEFEF;

            margin-top: .5em;

            opacity: 0;
            background: $cl-black;
            border-radius: 4px;

            &:after {
              position: relative;
              display: inline-block;
              white-space: nowrap;
              padding: .2em .4em;
              text-align: left;

              @include box-reset;
            }
          } // .tooltip

          &:hover .tooltip {
            opacity: 1;
            visibility: visible;
          }
        }

        button {
          padding-top: 2px;

          &:not(:disabled):hover {
            background: $cl-shuri;
          }
        } // button

        &.play .tooltip:after {
          content: 'Try Code';
        }
        &.compile {
          .tooltip:after {
            content: 'Compile';
          }

          &.compiling {
            .tooltip:after {
              content: 'Compiling...';
            }

            button {
              color: #ffff1d;

              &:hover, &:disabled {
                background-color: inherit;
              }
            }
          }
        }
        &.theme .tooltip:after {
          content: 'Theme';
        }

        &.theme {
          select {
            direction: rtl;
            text-align: left;
            option {
              text-align: left;
            }
          }
        }

        &:not(:last-child) {
          margin-right: .4em;
        }
      }
    }
  }

  .codehilite {
    display: block;
  }

  .yata.enabled + .codehilite {
    display: none;
  }

  .mirror {
    display: none;

    &.enabled {
      display: block;
    }
  }


  .mirror:not(.enabled) + .CodeMirror {
    display: none;

    & + .yata-resizer {
      display: none;
    }
  }

  $cm-shadow: 2px 2px 12px 1px #2aa;
  .CodeMirror {
    position: relative;
    z-index: 1;
    box-shadow: $cm-shadow;
  }

  .CodeMirror + .yata-console {
    background: #2E1E2F;
    color: #EAEAEA;
    font-family: monospace;
    font-size: .9em;
    padding: 1em 2em;

    border-radius: 6px;
    box-shadow: $cm-shadow;

    margin: 1em 0 2em 0;
    width: 100%;
    min-height: 120px;
    max-height: 220px;
    overflow-y: scroll;

    .yata-console-line {
      &:empty:after {
        content: " "; // force LF
      }
    }

    p, span {
      margin: 0;
      padding: 0;
      line-height: 1.5;

      white-space: pre;
    }

    p {
      display: block;
    }

    span {
      display: inline-block;
    }

    .ansi-bold {
      font-weight: bold;
    }

    @each $c in blue, green, yellow, cyan, magenta, red {
      .ansi-$(c)-fg {
        color: $c;
      }
      .ansi-$(c)-bg {
        background-color: $c;
      }
    }

    .ansi-white-fg {
      color: #EDEDED;
    }
    .ansi-white-bg {
      background-color: #EDEDED;
    }
    .ansi-black-fg {
      color: #AAA;
    }
    .ansi-black-bg {
      background-color: #AAA;
    }
  }

  .yata:not(.enabled) + .kunai-code + .mirror + .CodeMirror + .yata-console {
    display: none;
  }

  .CodeMirror + .yata-resizer {
    width: 100%;
    background: #DDD;
    border-top: 1px solid #AAA;
    border-bottom: 1px solid #666;
    padding-bottom: 3px;
    cursor: row-resize;
  }

  .cm-s-solarized.CodeMirror {
    box-shadow: none;
  }

  .CodeMirror {
    .CodeMirror-line {
      padding: 0 4px 0 12px;
    }
  }
}

